--- a/style/body/header.scss
+++ b/style/body/header.scss
@@ -8,13 +8,17 @@
     background-position: 0 0;
     background-repeat: no-repeat;
     overflow: visible;
+
+    @media only screen and (max-width: $bp-large) {
+        background-position: 0 20%;
+    }
 }
 
 header {
     grid-column: sidebar-start / display-end;
     font-size: 1.8rem;
     font-family: $fira;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
     display: flex;
     align-items: center;
     padding: 0 5rem 0 18rem;
@@ -25,7 +29,11 @@ header {
         flex-direction: column;
         padding: 0%;
         justify-content: center;
-        background: linear-gradient(to right, rgba(255, 255, 255, 0.779), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
+        background: linear-gradient(to right, rgba(255, 255, 255, 0.179), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
+    }
+
+    @media only screen and (max-width: $bp-mid) {
+        background: linear-gradient(to right, rgba(255, 255, 255, 0.8), whitesmoke), url('../../assets/images/avatars-Lo9oruaAMvM5QsWL-0uJ23w-t500x500.jpg') top left/auto 100% no-repeat;
     }
 
     h1 {
